@@ -1,0 +1,27 @@
+*.o
+ltmain.sh
+mkinstalldirs
+depcomp
+*.gmo
+Makefile.in.in
+.intltool-merge-cache
+configure.in
+libtool
+configure
+Makefile
+Makefile.in
+xfce4-mixer.desktop
+intltool-*
+config.*
+stamp-it
+stamp-h1
+POTFILES
+*.m4
+*.swp
+.deps
+.libs
+xfce4-mixer
+missing
+install-sh
+compile
+autom4te*
