@@ -1,5 +1,11 @@
-* Monitor for changes and update the controls according to them
+* Monitor for changes and update the controls according to them:
+   1) Add GHashTable for (track name => mixer widget) lookup
+   2) Extend xfce_mixer_bus_message() to handle all types of messages
+      by updating the corresponding mixer widgets
+
 * Write panel plugin
+
 * Write MCS plugin (or go the xfconf way)
+
 * Allow changing controls from the console, probably via something like:
   --change-control=SOUNDCARD NAME:TRACK NAME:NEW VALUE
